# server/swagger_server/database/database.py
@@ -1,24 +1,43 @@
-
-
+carts = {}
 products = {}
-def addProduct(customerID, productID):
-	if customerID in products.keys():
-		products[customerID].append(productID)
-	else:
-		products[customerID] = [productID]
 
 
-def removeProduct(customerID, productID):
-	if customerID in products.keys():
-		try:
-			products[customerID].remove(productID)
-			return True
-		except ValueError:
-			return False
-	return False
+def addProductToCollection(sku, productName):
+    if sku not in products.keys():
+        products[sku] = productName
+        print("Added " + productName + " to the db")
 
+
+def getProductFromCollection(sku):
+    if sku in products.keys():
+        return products.get(sku)
+
+
+def addProductToCart(customerId, sku):
+    if customerId in carts.keys():
+        carts[customerId].append(sku)
+        print("Added " + sku + " to " + customerId + "'s cart")
+    else:
+        carts[customerId] = [sku]
+        print("Added " + sku + " to " + customerId + "'s cart")
+
+
+def removeProductFromCart(customerId, sku):
+    if customerId in carts.keys():
+        try:
+            carts[customerId].remove(sku)
+            print("Removed " + sku + " to " + customerId + " cart")
+            return True
+        except ValueError:
+            return False
+    return False
+
+
+def getCart(customerId):
+    if customerId in carts.keys():
+        return carts.get(customerId)
 
 
 def printProducts():
-	for k,v in products.items():
-		print(k,v)
+    for k, v in carts.items():
+        print(k, v)
