# server/swagger_server/models/__init__.py
@@ -4,5 +4,4 @@ from __future__ import absolute_import
 # import models into model package
 from .coupon import Coupon
 from .error import Error
-from .search_results import SearchResults
-from .street_address import StreetAddress
+from .product import Product
