# server/swagger_server/models/search_results.py
@@ -1,90 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from .base_model_ import Model
-from datetime import date, datetime
-from typing import List, Dict
-from ..util import deserialize_model
-
-
-class SearchResults(Model):
-    """
-    NOTE: This class is auto generated by the swagger code generator program.
-    Do not edit the class manually.
-    """
-    def __init__(self, product_description: str=None, product_sku: int=None):
-        """
-        SearchResults - a model defined in Swagger
-
-        :param product_description: The product_description of this SearchResults.
-        :type product_description: str
-        :param product_sku: The product_sku of this SearchResults.
-        :type product_sku: int
-        """
-        self.swagger_types = {
-            'product_description': str,
-            'product_sku': int
-        }
-
-        self.attribute_map = {
-            'product_description': 'product_description',
-            'product_sku': 'product_sku'
-        }
-
-        self._product_description = product_description
-        self._product_sku = product_sku
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'SearchResults':
-        """
-        Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The SearchResults of this SearchResults.
-        :rtype: SearchResults
-        """
-        return deserialize_model(dikt, cls)
-
-    @property
-    def product_description(self) -> str:
-        """
-        Gets the product_description of this SearchResults.
-
-        :return: The product_description of this SearchResults.
-        :rtype: str
-        """
-        return self._product_description
-
-    @product_description.setter
-    def product_description(self, product_description: str):
-        """
-        Sets the product_description of this SearchResults.
-
-        :param product_description: The product_description of this SearchResults.
-        :type product_description: str
-        """
-
-        self._product_description = product_description
-
-    @property
-    def product_sku(self) -> int:
-        """
-        Gets the product_sku of this SearchResults.
-
-        :return: The product_sku of this SearchResults.
-        :rtype: int
-        """
-        return self._product_sku
-
-    @product_sku.setter
-    def product_sku(self, product_sku: int):
-        """
-        Sets the product_sku of this SearchResults.
-
-        :param product_sku: The product_sku of this SearchResults.
-        :type product_sku: int
-        """
-
-        self._product_sku = product_sku
-
